ubooguity/ubooquity-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: ubooquity
  name: ubooquity
  namespace: mediaserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ubooquity
    spec:
      containers:
      - image: linuxserver/ubooquity
        name: ubooquity
        ports:
        - containerPort: 2202
        - containerPort: 2203
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: ubooquity-config
        - mountPath: /books
          name: ubooquity-ebooks
      restartPolicy: Always
      volumes:
      - name: ubooquity-config
        nfs:
          server: 192.168.178.33
          path: "/volume1/openflixr/ubooquity/config"
      - name: ubooquity-ebooks
        nfs:
          server: 192.168.178.33
          path: "/volume1/calibre"
status: {}
