ubooguity/ubooquity-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.9.0 (093c756)
  creationTimestamp: null
  labels:
    io.kompose.service: ubooquity
  name: ubooquity
  namespace: mediaserver
spec:
  ports:
  - name: "2202"
    port: 2202
    targetPort: 2202
  - name: "2203"
    port: 2203
    targetPort: 2203
  type: NodePort
  selector:
    io.kompose.service: ubooquity
