ubooguity/ubooquity-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ubooquity-external
  namespace: mediaserver
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    #traefik.frontend.redirect.entryPoint: https
    #traefik.frontend.redirect.regex: ^http://(.*)
    #traefik.frontend.redirect.replacement: https://$1
    #ingress.kubernetes.io/auth-type: basic
    #ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
  - host: ebooks.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ubooquity
          servicePort: 2202
  - host: ebooks-adm.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ubooquity
          servicePort: 2203
  - host: booksonic.cloud.oraperf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ubooquity
          servicePort: 2202
  - host: ebooks-adm.cloud.oraperf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ubooquity
          servicePort: 2203
