ubooguity/ubooquity-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ubooquity
  namespace: mediaserver
  annotations:
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: ebooks.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ubooquity
          servicePort: 2202
  - host: ebooks-adm.internal.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ubooquity
          servicePort: 2203
